#13 Corrected alignment of State names and Powder Report in location bar.

--- a/css/default.css
+++ b/css/default.css
@@ -224,7 +224,36 @@ ul.locations_menu li span.locations_active {
   box-shadow: 0 0 4px #000000 inset;
 }
 
-ul.locations_menu li span span.locations_resorts{
+span.locations_resorts {
+  position: absolute;
+  top: 34px;
+  left: 20px;
+}
+
+span.locations_name {
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+}
+
+#align-mt {
+  margin-left: 20px;
+}
+
+#align-utah {
+  margin-left: 40px;
+}
+
+#align-nm {
+  margin-left: 7px;
+}
+
+#align-vt {
+  margin-left: 24px;
+}
+
+ul.locations_menu li span span.locations_resorts {
   color: #0B75AF;
   float: left;
   clear: both;
@@ -232,7 +261,7 @@ ul.locations_menu li span span.locations_resorts{
   letter-spacing: 2px;
 }
 
-ul.locations_menu li div.locations_box{
+ul.locations_menu li div.locations_box {
   display: block;
   position: absolute;
   width: 170px;
